--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "node-cron": "^1.1.1",
     "node-schedule": "^1.1.0",
     "react": "^15.3.0",
+    "react-addons-create-fragment": "^15.3.0",
+    "react-addons-css-transition-group": "^15.3.0",
+    "react-addons-linked-state-mixin": "^15.3.0",
+    "react-addons-perf": "^15.3.0",
+    "react-addons-pure-render-mixin": "^15.3.0",
+    "react-addons-test-utils": "^15.3.0",
+    "react-addons-transition-group": "^15.3.0",
+    "react-addons-update": "^15.3.0",
     "react-dom": "^15.3.0",
     "time": "^0.11.4"
   },
@@ -17,5 +25,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JeroenBe/SnapTwit.git"
+  }
 }
