--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-addons-transition-group": "^15.3.0",
     "react-addons-update": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-komposer": "^1.13.1",
     "react-mounter": "^1.2.0",
     "time": "^0.11.4"
   },
